<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="North">North</string>
    <string name="South">South</string>
    <string name="East">East</string>
    <string name="West">West</string>
    <string name="Navigate2Sec">Navigate to secondary activity</string>
    <string name="title_activity_practical_test01_var05_secondary">PracticalTest01Var05SecondaryActivity</string>
    <string name="Register">Register</string>
    <string name="Cancel">Cancel</string>

</resources>
